Implemented Friend Request process

--- a/tsbb-web/tsbb/login/login.html
+++ b/tsbb-web/tsbb/login/login.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="loginController">
+<div>
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
