--- a/tsbb-web/index.html
+++ b/tsbb-web/index.html
@@ -20,6 +20,9 @@
     <script src="libs/angular-route/angular-route.js"></script>
     <script src='libs/angular-loading-bar/build/loading-bar.min.js'></script>
     <script src="libs/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="libs/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="libs/angular-local-storage/dist/angular-local-storage.min.js"></script>
+
     <!-- Custom CSS -->
     <link href="content/css/style.css" rel="stylesheet" />
     <!-- Load app main script -->
@@ -29,57 +32,23 @@
     <script src="services/authInterceptorService.js"></script>
     <script src="services/accountService.js"></script>
     <script src="services/notificationService.js"></script>
-    <script src="services/homeService.js"></script>
+    <script src="services/bulletinService.js"></script>
+    <script src="services/stickyService.js"></script>
+    <script src="services/friendService.js"></script>
     <!-- Load directives -->
+    <script src="directives/dragDirective.js"></script>
     <!-- Load controllers -->
-    <script src="tsbb/home/indexController.js"></script>
     <script src="tsbb/signup/signupController.js"></script>
     <script src="tsbb/login/loginController.js"></script>
     <script src="tsbb/home/homeController.js"></script>
+    <script src="tsbb/home/indexController.js"></script>
+    <script src="tsbb/profile/profileController.js"></script>
     <!-- Load custom filters -->
 </head>
 
 <body>
     <div id="wrapper" data-ng-controller="indexController">
-        <!-- The static navbar, same in all the views! -->
         <nav class="navbar navbar-inverse navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="/">TS Bulletin Board</a>
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse">
-                    <ul data-ng-show="authentication.authenticated" class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
-
-                            <a style="cursor:pointer;" class="dropdown-toggle" data-toggle="dropdown"> <span class="glyphicon glyphicon-user"></span> {{authentication.email}}<b class="caret"></b></a>
-                            <ul class="dropdown-menu" id="myDropDown">
-                                <li><a href="/home"><span class="glyphicon glyphicon-list-alt"></span> Your BulletinBoards</a></li>
-                                <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-                                <li><a href="/settings"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-                                <li class="divider"></li>
-                                <li><a style="cursor:pointer;" data-ng-click="logOut()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container-fluid -->
-        </nav>
-
-
-        <!-- ANGULAR DYNAMIC CONTENT -->
-        <div ng-view></div>
-        <!--<nav class="navbar navbar-inverse navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">TS Bulletin Board</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -88,33 +57,33 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <p class="nav navbar-text">Logged in as:</p>
-                    </li>
-                    <li class="dropdown">
-                        <ul class="dropdown-menu" id="myDropDown">
-                            <li><a href="/home"><span class="glyphicon glyphicon-list-alt"></span> Bulletin Boards</a></li>
-                            <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-                            <li><a href="/settings"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-                            <li class="divider"></li>
-                            <li><a style="cursor:pointer;" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
             </div>
-
             <div class="navbar-default sidebar" role="navigation" data-ng-show="authentication.authenticated">
                 <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
+                    <ul class="nav in" id="side-menu">
                         <li>
-                            <a href="/dashboard"><i class="fa fa-dashboard fa-fw"></i> home</a>
+                            <!--<a href="/home"><i class="fa fa-list-alt fa-fw"></i> Bulletin Boards</a>-->
+                            <a href="/home"><i class="fa fa-list-alt fa-fw"></i> Bulletin Boards</a>
+                            <ul class="nav nav-second-level collapse in" aria-expanded="true">
+
+                                <li data-ng-show="!$root.joinedBulletins.length"> <a href="#">No bulletins yet!</a> </li>
+                                <li data-ng-class="{activeBulletin:joinedBulletin.isActive}" data-ng-class="{activeBulletin:$root.joinedBulletin.isActive}"
+                                    ng-repeat="joinedBulletin in $root.joinedBulletins">
+                                    <a style="cursor:pointer;" data-ng-click="$root.active(joinedBulletin)" data-ng-class="{bulletinTitle:joinedBulletin.isActive}">
+                                        {{joinedBulletin.Title}}
+                                        </a>
+                                </li>
+
+                            </ul>
                         </li>
                         <li>
-                            <a href="/company"><i class="fa fa-male fa-fw"></i> Companies</a>
+                            <a href="/profile"><i class="fa fa-user fa-fw"></i> Profile</a>
                         </li>
                         <li>
-                            <a href="" data-ng-click="logOut()"><i class="fa fa-sign-out fa-fw"></i> Logout {{authentication.userName}}</a>
+                            <a href="/settings"><i class="fa fa-cog fa-fw"></i> Settings</a>
+                        </li>
+                        <li>
+                            <a href="" data-ng-click="logOut()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -127,7 +96,7 @@
             <div class="navbar-static-bottom text-center">
                 &copy; 2017. <a target="_blank" href="https://www.facebook.com/TSBB-1681096425521490/">Tanveer Sidiq</a>
             </div>
-        </div>-->
+        </div>
     </div>
 </body>
 
