--- a/tsbb-web/tsbb/home/home.html
+++ b/tsbb-web/tsbb/home/home.html
@@ -1,182 +1,81 @@
-<div ng-controller="indexController" >
-    <!-- The left panel containing all the tools -->
-    <div class="panel panel-primary" id="leftPanel">
+<div data-ng-init="initialize()">
+    <br/>
+    <!-- Create Bulletin Dialog START -->
+    <div class="modal" id="createBulletin" tabindex="-1" role="dialog" aria-labelledby="createBulletinLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Enter unique name for Bulletin Board</h4>
+                </div>
+                <div class="modal-body">
+                    <form name="frmBulletin">
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Bulletin board name..." ng-model="activeBulletin.name" required/>
+                        </div>
+                    </form>
 
-        <div class="panel-heading">
-            <h3 class="panel-title">Tools</h3>
-        </div>
-        <div class="panel-body">
-            <button type="button" style="margin-left: 9px;" class="btn btn-primary" ng-click="openCreateDialog()"><span class="glyphicon glyphicon glyphicon-edit"></span> New BulletinBoard</button>
-
-            <!-- Print all the user's bulletinBoards -->
-            <h4 style="text-align:center;">BulletinBoards </h4>
-            <table class="table table-hover">
-                <tr ng-show="!loggedInBulletins.length">
-                    <td><span class="glyphicon glyphicon-info-sign"></span> No bulletins yet! </td>
-                </tr>
-                <tr ng-class="{activeBulletin:bulletin.isActive}" ng-repeat="bulletin in loggedInBulletins">
-                    <td ng-click="setActive(bulletin)" style="cursor:pointer;"><a class="bulletinTitle" style="cursor:pointer;"><span class="glyphicon glyphicon-list-alt"></span> {{bulletin.title}} </a></td>
-                </tr>
-            </table>
-
-            <h4 style="text-align:center;">Your shared BulletinBoards </h4>
-            <table class="table table-hover">
-                <tr ng-show="!sharedBulletins.length">
-                    <td><span class="glyphicon glyphicon-info-sign"></span> No bulletins yet! </td>
-                </tr>
-                <tr ng-class="{activeBulletin:sharedBulletin.isActive}" ng-repeat="sharedBulletin in sharedBulletins">
-                    <td style="cursor:pointer;" ng-click="setActive(sharedBulletin)"><a class="bulletinTitle" style="cursor:pointer;"><span class="glyphicon glyphicon-list-alt"></span> {{sharedBulletin.title}} </a></td>
-                </tr>
-            </table>
-
-            <h4 style="text-align:center;">Joined BulletinBoards </h4>
-            <table class="table table-hover">
-                <tr ng-show="!joinedBulletins.length">
-                    <td><span class="glyphicon glyphicon-info-sign"></span> No bulletins yet! </td>
-                </tr>
-                <tr ng-class="{activeBulletin:joinedBulletin.isActive}" ng-repeat="joinedBulletin in joinedBulletins">
-                    <td style="cursor:pointer;" ng-click="setActive(joinedBulletin)"><a class="bulletinTitle"><span class="glyphicon glyphicon-list-alt"></span> {{joinedBulletin.title}} </a></td>
-                </tr>
-            </table>
-
-            <!-- Options for stuff to add to the bulletinBoard -->
-            <h4 style="border-bottom:1px solid #999;margin-top:30px;text-align:center;"> Add Stuff! </h4>
-
-            <!-- Add sticky button -->
-            <button type="button" class="btn btn-warning addbtn" ng-click="openCreateStickyDialog()"><span class="glyphicon glyphicon-pushpin"></span> Sticky</button>
-
-            <!-- Add image button -->
-            <button type="button" class="btn btn-info addbtn" ng-click="uploadImage()"><span class="glyphicon glyphicon-picture"></span> Image </button>
-
-            <!-- Add Youtube Video Button -->
-            <button type="button" class="btn btn-danger addbtn" ng-click="openCreateYoutube()"><span class="glyphicon glyphicon-film"></span> Youtube </button>
-
+                </div>
+                <div class="modal-footer">
+                    <div class="form-group">
+                        <button data-ng-disabled="frmBulletin.$invalid" type="button" class="btn btn-primary" ng-click="createBulletin()" data-dismiss="modal">Create</button>
+                        <button id="btnClose" type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- Create Bulletin Dialog END -->
+
+    <!-- Create Stick Bulletin Dialog START -->
+    <div class="modal" id="createStickBulletin" tabindex="-1" role="dialog" aria-labelledby="createStickBulletinLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Add sticky note</h4>
+                </div>
+                <div class="modal-body">
+                    <form name="frmStickBulletin">
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Sticky title..." ng-model="sticky.title" />
+                            <textarea class="form-control" style="margin-top:10px" rows="4" placeholder="Sticky Content..." ng-model="sticky.content"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <div class="form-group">
+                        <button data-ng-disabled="frmStickBulletin.$invalid" type="button" class="btn btn-primary" ng-click="createStickyNote(newSticky)"
+                            data-dismiss="modal">Create</button>
+                        <!--<button data-ng-disabled="frmBulletin.$invalid" type="button" class="btn btn-primary" ng-click="create()" data-dismiss="modal">Create</button>-->
+                        <button id="btnClose" type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Create Stick Bulletin Dialog END -->
 
     <!-- The bulletin Area -->
     <div class="panel panel-warning" id="bulletinArea">
         <div class="panel-heading">
+
+            <!--<button type="button" class="btn btn-primary pull-right" data-ng-click="addBulletin()">+ Add</button>-->
+            <!--<button type="button" class="btn btn-warning addbtn" ng-click="openCreateStickyDialog()"><span class="glyphicon glyphicon-pushpin"></span> Sticky</button>-->
+            <a data-ng-show="activeBulletin.isActive" data-ng-click="addStickyNote()" class="btn btn-warning btn-xs pull-right"><i class="fa fa-sticky-note fa-fw"></i></a>
+            <a data-ng-show="!activeBulletin.isActive" data-ng-click="addBulletin()" class="btn btn-success btn-xs pull-right"><i class="fa fa-plus fa-fw"></i></a>
             <h3 class="panel-title">{{activeBulletin.title}}</h3>
+
         </div>
         <div class="panel-body" id="bulletinEditable">
-
-            <div class="panel panel-info bulletinImage" ng-repeat="image in theImages" draggable>
+            <div class="panel panel-warning sticky" ng-repeat="sticky in stickyNotes" draggable>
                 <div class="panel-heading">
-                    <h3 class="panel-title" style="display:inline-block;">Image</h3>
-                    <button type="button" class="btn btn-danger btn-xs pull-right" ng-click="removeImage(image)"><span class="glyphicon glyphicon glyphicon-remove"></span> Remove</button>
-                </div>
-                <div class="panel-body image-body" style="background-image:url('img{{image.filePath}}')">
-                    <!--img ng-src="img{{image.filePath}}"/-->
-                </div>
-            </div>
-
-            <!-- Visual representation of stickyNotes! -->
-            <div class="panel panel-warning sticky" ng-repeat="sticky in theStickies" draggable>
-                <div class="panel-heading">
-                    <h3 class="panel-title" style="display:inline-block;">{{sticky.title}}</h3>
-                    <button type="button" class="btn btn-danger btn-xs pull-right" ng-click="removeSticky(sticky)"><span class="glyphicon glyphicon glyphicon-remove"></span> Remove</button>
+                    <h3 class="panel-title" style="display:inline-block;">{{sticky.Title}}</h3>
+                    <button type="button" class="btn btn-danger btn-xs pull-right" ng-click="removeStickyNote(sticky)"><i class="fa fa-trash fa-fw"></i></button>
                 </div>
                 <div class="panel-body stickyBody">
-                    <p>{{sticky.content}}</p>
+                    <p>{{sticky.Content}}</p>
                 </div>
             </div>
-
-            <!-- Visual representation of youtubeVideos! -->
-            <div class="panel panel-danger youtube" ng-repeat="youtube in theYoutubes" draggable>
-                <div class="panel-heading">
-                    <h3 class="panel-title" style="display:inline-block;">YouTube</h3>
-                    <button type="button" class="btn btn-danger btn-xs pull-right" ng-click="removeYoutube(youtube)"><span class="glyphicon glyphicon glyphicon-remove"></span> Remove</button>
-                </div>
-                <div class="panel-body youtube-body">
-                    <iframe width="240" height="168" ng-src="{{getIframeSrc(youtube.youtubeID)}}" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-
-
-
-            <!-- User feedback divs. -->
-        </div>
-        <div id="serverResponse" class="fader" ng-class="{in:showing}">
-            <h5><span class="glyphicon glyphicon-ok-circle" style="color:rgb(92,184,92);"></span> {{updateStatus}}!</h5>
-        </div>
-        <div id="serverResponse" class="fader" ng-class="{in:errorShowing}">
-            <h5><span class="glyphicon glyphicon-remove-circle" style="color:rgb(217,83,79);"></span> {{updateStatus}}</h5>
-        </div>
-        <div id="serverResponse" class="fader" ng-class="{in:userShowing}">
-            <h5><span class="glyphicon glyphicon-user" style="color:rgb(92,184,92);"></span> {{updateStatus}} joined this bulletin!</h5>
         </div>
 
     </div>
-
-    <!-- Popup Templates -->
-    <script type="text/ng-template" id="createBulletinDialog.html">
-        <div class="modal-header">
-            <h3>Give your new bulletinBoard a fancy name!</h3>
-        </div>
-        <div class="modal-body">
-            <form>
-                <input class="form-control" type="text" placeholder="New fancy name..." ng-model="newName.text" />
-                <button class="btn btn-primary" style="margin-top:10px;" ng-click="ok(newName)">Create</button>
-                <button class="btn btn-danger" style="margin-top:10px;" ng-click="cancel()">Cancel</button>
-            </form>
-        </div>
-    </script>
-
-    <script type="text/ng-template" id="createStickyDialog.html">
-        <div class="modal-header">
-            <h3> Create a new Sticky!
-                <h3>
-        </div>
-        <div class="modal-body">
-            <form>
-                <input class="form-control" type="text" placeholder="Sticky title..." ng-model="newSticky.title" />
-                <textarea class="form-control" style="margin-top:10px" rows="4" placeholder="Sticky Content..." ng-model="newSticky.content"></textarea>
-                <button class="btn btn-primary" style="margin-top:10px;" ng-click="ok(newSticky)">Create</button>
-                <button class="btn btn-danger" style="margin-top:10px;" ng-click="cancel()">Cancel</button>
-            </form>
-        </div>
-    </script>
-
-    <script type="text/ng-template" id="createYoutubeDialog.html">
-        <div class="modal-header">
-            <h3> Put a youtube Video on your bulletinBoard!
-                <h3>
-        </div>
-        <div class="modal-body">
-            <p> Copy and paste the Url of the Youtube video from the adress bar!
-                <form>
-                    <input class="form-control" type="text" placeholder="Youtube Url..." ng-model="newYoutube.url" />
-                    <button class="btn btn-primary" style="margin-top:10px;" ng-click="ok(newYoutube)">Create</button>
-                    <button class="btn btn-danger" style="margin-top:10px;" ng-click="cancel()">Cancel</button>
-                </form>
-        </div>
-    </script>
-
-    <script type="text/ng-template" id="uploadImageDialog.html">
-        <div class="modal-header">
-            <h3> Upload an Image to your bulletinBoard!
-                <h3>
-        </div>
-
-        <div class="modal-body">
-            <div flow-init flow-files-submitted="$flow.upload()">
-                <div class="drop" flow-drop ng-class="dropClass">
-                    <span class="btn btn-default" flow-btn>Choose File</span>
-                    <b>OR</b> Drag And Drop your file here
-                </div>
-
-                <div ng-repeat="file in $flow.files" class="transfer-box">
-                    {{file.relativePath}} ({{file.size}}bytes)
-                    <div class="progress progress-striped" ng-class="{active: file.isUploading()}">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="{{file.progress() * 100}}" aria-valuemin="0" aria-valuemax="100"
-                            ng-style="{width: (file.progress() * 100) + '%'}">
-                            <span class="sr-only">{{file.progress()}}% Complete</span>
-                        </div>
-                    </div>
-                </div>
-
-                <button class="btn btn-primary" style="margin-top:10px;" ng-click="ok($flow.files[0].file)">Upload</button>
-                <button class="btn btn-danger" style="margin-top:10px;" ng-click="cancel()">Cancel</button>
-            </div>
-    </script>
+</div>
