--- a/tsbb-web/tsbb/home/home.html
+++ b/tsbb-web/tsbb/home/home.html
@@ -61,12 +61,12 @@
             <!--<button type="button" class="btn btn-primary pull-right" data-ng-click="addBulletin()">+ Add</button>-->
             <!--<button type="button" class="btn btn-warning addbtn" ng-click="openCreateStickyDialog()"><span class="glyphicon glyphicon-pushpin"></span> Sticky</button>-->
             <a data-ng-show="activeBulletin.isActive" data-ng-click="addStickyNote()" class="btn btn-warning btn-xs pull-right"><i class="fa fa-sticky-note fa-fw"></i></a>
-            <a data-ng-show="!activeBulletin.isActive" data-ng-click="addBulletin()" class="btn btn-success btn-xs pull-right"><i class="fa fa-plus fa-fw"></i></a>
+            <a data-ng-click="addBulletin()" class="btn btn-success btn-xs pull-right"><i class="fa fa-plus fa-fw"></i></a>
             <h3 class="panel-title">{{activeBulletin.title}}</h3>
 
         </div>
         <div class="panel-body" id="bulletinEditable">
-            <div class="panel panel-warning sticky" ng-repeat="sticky in stickyNotes" draggable>
+            <div class="panel panel-warning sticky" ng-repeat="sticky in activeBulletin.BulletinStickies" draggable>
                 <div class="panel-heading">
                     <h3 class="panel-title" style="display:inline-block;">{{sticky.Title}}</h3>
                     <button type="button" class="btn btn-danger btn-xs pull-right" ng-click="removeStickyNote(sticky)"><i class="fa fa-trash fa-fw"></i></button>
