--- a/tsbb-admin/index.html
+++ b/tsbb-admin/index.html
@@ -22,7 +22,10 @@
     <script src="../libs/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="../libs/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../libs/angular-local-storage/dist/angular-local-storage.min.js"></script>
-
+    <!-- Morris Charts CSS -->
+    <link href="../libs/morris.js/morris.css" rel="stylesheet" />
+    <script src="../libs/raphael/raphael.js"></script>
+    <script src="../libs/morris.js/morris.js"></script>
     <!-- Custom CSS -->
     <link href="content/css/style.css" rel="stylesheet" />
     <!-- Load app main script -->
@@ -32,6 +35,7 @@
     <script src="services/authInterceptorService.js"></script>
     <script src="services/accountService.js"></script>
     <script src="services/notificationService.js"></script>
+    <script src="services/metricService.js"></script>
     <!-- Load controllers -->
     <script src="tsbbAdmin/login/loginController.js"></script>
     <script src="tsbbAdmin/home/homeController.js"></script>
